<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo Cloud</string>
    <string name="all_ok">OK</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_createtodo">Create todo</string>
    <string name="all_createcategory">Create category</string>
    <string name="all_createlist">Create list</string>
    <string name="modifytodo_title">Modify todo</string>
    <string name="modifycategory_title">Modify category</string>
    <string name="modifylist_title">Modify list</string>
    <string name="movelist_spinnerlabel">Category:</string>
    <string name="movelist_title">Move list</string>
    <string name="movelist_spinneritemlistnotincategory">Outside category</string>
    <string name="all_today">Today</string>
    <string name="all_next7days">Next 7 days</string>
    <string name="all_all">All</string>
    <string name="all_completed">Completed</string>
    <string name="all_noreminder">No reminder</string>
    <string name="all_noduedate">No due date</string>
    <string name="reminderdatepicker_positivebuttontext">Time</string>
    <string name="all_delete">Delete</string>
    <string name="all_reminder">Reminder</string>
    <string name="all_emailhint">Email</string>
    <string name="all_passwordhint">Password</string>
    <string name="all_login">Login</string>
    <string name="loginuser_linktoregisterbutton">Do not have an account yet? Register now!</string>
    <string name="registeruser_namehint">Name</string>
    <string name="all_register">Register</string>
    <string name="all_change_password">Change password</string>
    <string name="all_reset_password">Reset password</string>
    <string name="all_submit">Submit</string>
    <string name="all_failedtoconnect">
        Connection failed. Please check your internet connection.
    </string>
    <string name="all_anerroroccurred">An error occurred. Please try again.</string>
    <string name="registeruser_thisemailalreadyexisted">
        This email is already registered.
    </string>
    <string name="confirmdelete_deletetodotitle">Delete todo</string>
    <string name="confirmdelete_deletelisttitle">Delete list</string>
    <string name="confirmdelete_deletecategorytitle">Delete category</string>
    <string name="confirmdelete_deletetodoactiontext">"Are you sure you want to delete this todo: "</string>
    <string name="confirmdelete_deletelistactiontext">"Are you sure you want to delete this list: "</string>
    <string name="confirmdelete_deletecategoryactiontext">"Are you sure you want to delete this category: "</string>
    <string name="registeruser_confirmpasswordhint">Confirm password</string>
    <string name="registeruser_confirmpassworderrorlabel">Passwords do not match.</string>
    <string name="logoutuser_title">Logout</string>
    <string name="logoutuser_actiontext">Are you sure you want to log out?</string>
    <string name="all_selected">selected</string>
    <string name="confirmdelete_todostitle">Delete todos</string>
    <string name="confirmdelete_todosactiontext">Are you sure you want to delete the selected todos?</string>
    <string name="confirmdelete_liststitle">Delete categories</string>
    <string name="confirmdelete_listsactiontext">Are you sure you want to delete the selected lists?</string>
    <string name="confirmdelete_categoriestitle">Delete categories</string>
    <string name="confirmdelete_categoriesactiontext">Are you sure you want to delete the selected categories?</string>
    <string name="all_modify">Modify</string>
    <string name="all_move">Move</string>
    <string name="all_create">Title</string>
    <string name="all_priority">Priority</string>
    <string name="all_descriptionhint">Description</string>
    <string name="all_duedatetitle">Due date</string>
    <string name="all_entertitle">Please enter title.</string>
    <string name="registeruser_enteremailhint">Enter your email address.</string>
    <string name="registeruser_enterpasswordhint">Enter your password.</string>
    <string name="loginuser_error">Incorrect email address or password.</string>
    <string name="registeruser_nameerrorlabel">Enter your name.</string>
    <string name="registeruser_entervalidemailhint">Enter valid email address.</string>
    <string name="registeruser_enterproperpasswordhint">
        The minimum length of password is 8 characters, and it is required to contain a lowercase letter, an uppercase letter and a number.
    </string>
    <string name="settings_reminderstitle">Reminders</string>
    <string name="settings_remindersoundtitle">Reminder sound</string>
    <string name="settings_vibrationtitle">Vibration</string>
    <string name="settings_ledlighttitle">Reminder LED</string>
    <string name="settings_accounttitle">Account</string>
    <string name="settings_modifypasswordtitle">Modify password</string>
    <string name="all_settings">Settings</string>
    <string name="actionbardrawertoggle_opendrawer">Open</string>
    <string name="actionbardrawertoggle_closedrawer">Close</string>
    <string name="all_search">Search</string>
    <string name="all_sort">Sort</string>
    <string name="searchview_queryhint">Search…</string>
    <string name="dialog_sort_by_due_date_title">Sort by due date</string>
    <string name="dialog_sort_by_priority_title">Sort by priority</string>
    <string name="modifypassword_currentpasswordhint">Current password</string>
    <string name="modifypassword_newpasswordhint">New password</string>
    <string name="modifypassword_confirmpasswordhint">Confirm password</string>
    <string name="modifypassword_currentpassworderrorlabel">Enter your current password.</string>
    <string name="modifypassword_incorrectcurrentpassword">Your current password is incorrect.</string>
    <string name="modifypassword_failedtoresetpassword">Failed to reset password. Please try again!</string>
    <string name="modifypassword_passwordchangedsuccessfully">Password changed successfully.</string>
    <string name="resetpassword_passwordresetsuccessful">Password reset successful.</string>
    <string name="loginuser_linktoresetpasswordbutton">Forgot your password?</string>
    <string name="resetpassword_resetpasswordlabel">Enter your email address and we will send you a new password.</string>
    <string name="all_drag_handle">Drag handle</string>

</resources>
