<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_reminderstitle">

        <com.rolandvitezhu.todocloud.customcomponent.CustomisableSwitchPreferenceCompat
            android:key="reminder_sound_preference"
            android:title="@string/settings_remindersoundtitle"
            android:defaultValue="true"/>

        <com.rolandvitezhu.todocloud.customcomponent.CustomisableSwitchPreferenceCompat
            android:key="vibration_preference"
            android:title="@string/settings_vibrationtitle"
            android:defaultValue="true"/>

        <com.rolandvitezhu.todocloud.customcomponent.CustomisableSwitchPreferenceCompat
            android:key="led_light_preference"
            android:title="@string/settings_ledlighttitle"
            android:defaultValue="true"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_accounttitle">

        <com.rolandvitezhu.todocloud.customcomponent.CustomisablePreference
            android:key="modify_password_preference"
            android:title="@string/settings_modifypasswordtitle"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>