<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuitem_layoutappbarmainlistitem_modify"
        android:title="@string/all_modify"
        android:orderInCategory="0"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuitem_layoutappbarmainlistitem_delete"
        android:title="@string/all_delete"
        android:orderInCategory="0"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuitem_layoutappbarmainlistitem_move"
        android:title="@string/all_move"
        android:orderInCategory="0"
        android:icon="@drawable/ic_move_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>