<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="sortTodoListDialog"
            type="com.rolandvitezhu.todocloud.ui.activity.main.dialogfragment.SortTodoListDialogFragment" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:minWidth="300dp"
        android:layout_height="match_parent"
        android:background="@color/windowBackground">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_sort"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/dialog_sort_by_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dialog_sort_by_due_date_title"
            android:textSize="18sp"
            android:onClick="@{() -> sortTodoListDialog.onSortByDueDateClicked()}" />

        <TextView
            android:id="@+id/dialog_sort_by_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dialog_sort_by_priority_title"
            android:textSize="18sp"
            android:onClick="@{() -> sortTodoListDialog.onSortByPriorityClicked()}"  />
    </LinearLayout>
</layout>