<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_activity_horizontal"
        android:layout_marginStart="@dimen/margin_activity_horizontal"
        android:layout_marginRight="@dimen/margin_activity_horizontal"
        android:layout_marginEnd="@dimen/margin_activity_horizontal"
        android:layout_marginTop="@dimen/margin_activity_vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_modifytodo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textColorHint="@color/colorControlNormal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textinputedittext_modifytodo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/all_create"
                android:textColor="@color/textColorSecondary"
                android:theme="@style/MyEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_modifytodo_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/all_priority"
            android:textColor="@color/colorControlNormal"
            android:textSize="16sp"
            android:theme="@style/MyAppCompatSwitchTheme"/>

        <TextView
            android:text="@string/all_duedatetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorControlNormal"/>
        <TextView
            android:id="@+id/textview_modifytodo_duedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:text="@string/all_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorControlNormal"/>
        <TextView
            android:id="@+id/textview_modifytodo_reminderdatetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_activity_vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayout_modifytodo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:textColorHint="@color/colorControlNormal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textinputedittext_modifytodo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/all_descriptionhint"
                    android:textColor="@color/textColorSecondary"
                    android:theme="@style/MyEditTextTheme"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>