<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_createlistincategory_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorControlNormal"
            android:theme="@style/MyMaterialTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textinputedittext_createlistincategory_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/all_create"
                android:textColor="@color/textColorSecondary"
                android:theme="@style/MyEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/button_createlistincategory_cancel"
            android:text="@string/all_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button_createlistincategory_ok"
            android:text="@string/all_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/button_createlistincategory_cancel"
            android:layout_toRightOf="@+id/button_createlistincategory_cancel"
            style="?attr/borderlessButtonStyle"/>

    </RelativeLayout>

</LinearLayout>