<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="modifyListDialogFragment"
            type="com.rolandvitezhu.todocloud.ui.activity.main.dialogfragment.ModifyListDialogFragment" />
        <variable
            name="listsViewModel"
            type="com.rolandvitezhu.todocloud.ui.activity.main.viewmodel.ListsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_modifylist_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/all_create"
                android:textColorHint="@color/colorControlNormal"
                android:theme="@style/MyMaterialTheme">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_modifylist_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:theme="@style/MyEditTextTheme"
                    android:text="@={listsViewModel.list.title}" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/button_modifylist_cancel"
                android:text="@string/all_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MyBorderlessButtonStyle"
                android:onClick="@{(view) -> modifyListDialogFragment.onButtonCancelClick(view)}" />
            <Button
                android:id="@+id/button_modifylist_ok"
                android:text="@string/all_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/button_modifylist_cancel"
                android:layout_toRightOf="@+id/button_modifylist_cancel"
                style="@style/MyBorderlessButtonStyle"
                android:onClick="@{(view) -> modifyListDialogFragment.onButtonOkClick(view)}" />

        </RelativeLayout>

    </LinearLayout>
</layout>